--- a/app/public/data/bollingerBands.tmpl
+++ b/app/public/data/bollingerBands.tmpl
@@ -3,7 +3,7 @@
 <style>
 
 body {
-  font: 10px sans-serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .axis path,
@@ -97,7 +97,7 @@ d3.tsv("bollingerBands.tsv", function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Temperature (ºF)");
+      .text("Price ($)");
 
   var city = svg.selectAll(".city")
       .data(cities)
